--- a/static/scss/userprofile/myaccount.css
+++ b/static/scss/userprofile/myaccount.css
@@ -27,11 +27,6 @@
   letter-spacing: 1px;
 }
 
-.myaccount .account-card .myaccount-logout {
-  font-size: 13px;
-  font-weight: 800;
-}
-
 .myaccount .account-card .your-info {
   margin: 14px 0;
 }
@@ -53,8 +48,8 @@
   margin: 20px 0;
   text-align: left;
   background: transparent;
-  width: 93%;
-  max-width: 300px;
+  width: 100%;
+  max-width: 340px;
   -webkit-box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.224);
           box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.224);
   padding: 20px;
@@ -82,5 +77,86 @@
   outline: none;
   border: none;
   background: #0082ec;
+}
+
+.myaccount .account-card .my-orders .you-got-orders .order-is-payed {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.myaccount .account-card .my-orders .you-got-orders .order-is-payed .icon {
+  position: absolute;
+  -webkit-transform: translateX(60px) translateY(-2px);
+          transform: translateX(60px) translateY(-2px);
+  width: auto;
+  border-radius: 50%;
+  padding: 2px 6px;
+  background: rgba(28, 211, 28, 0.15);
+}
+
+.myaccount .account-card .my-orders .you-got-orders .order-is-payed .icon i {
+  color: rgba(28, 211, 28, 0.534);
+  font-size: 15px;
+}
+
+.myaccount .account-card .my-orders .you-got-orders .order-is-payed .icon-x {
+  position: absolute;
+  -webkit-transform: translateX(60px) translateY(-2px);
+          transform: translateX(60px) translateY(-2px);
+  width: auto;
+  border-radius: 50%;
+  padding: 2px 9px;
+  background: rgba(211, 28, 28, 0.15);
+}
+
+.myaccount .account-card .my-orders .you-got-orders .order-is-payed .icon-x i {
+  color: rgba(211, 28, 28, 0.534);
+  font-size: 16px;
+}
+
+.myaccount .account-card .my-orders .you-got-orders .order-status {
+  width: 100%;
+  height: 30px;
+  border-radius: 20px;
+  border: 1px solid #209bff;
+  position: relative;
+  padding: 0;
+}
+
+.myaccount .account-card .my-orders .you-got-orders .order-status .inner {
+  background: #0082ec;
+  height: 100%;
+  border-radius: 20px;
+}
+
+.myaccount .account-card .my-orders .you-got-orders .order-status .inner.one {
+  width: 10%;
+  border-bottom-right-radius: 0;
+  border-top-right-radius: 0;
+}
+
+.myaccount .account-card .my-orders .you-got-orders .order-status .inner.two {
+  width: 20%;
+  border-bottom-right-radius: 0;
+  border-top-right-radius: 0;
+}
+
+.myaccount .account-card .my-orders .you-got-orders .order-status .inner.three {
+  width: 30%;
+  border-bottom-right-radius: 0;
+  border-top-right-radius: 0;
+}
+
+.myaccount .account-card .my-orders .you-got-orders .order-status .inner.four {
+  width: 50%;
+  border-bottom-right-radius: 0;
+  border-top-right-radius: 0;
+}
+
+.myaccount .account-card .my-orders .you-got-orders .order-status .inner.five {
+  width: 60%;
+  border-bottom-right-radius: 0;
+  border-top-right-radius: 0;
 }
 /*# sourceMappingURL=myaccount.css.map */
