--- a/static/scss/userprofile/myaccount.scss
+++ b/static/scss/userprofile/myaccount.scss
@@ -23,11 +23,6 @@
           text-shadow: 1px 0 #183B56;
           letter-spacing:1px; 
         }
-        // LOG OUT
-        .myaccount-logout{
-          font-size: 13px;
-          font-weight: 800;
-        }
         // YOUR INFO
         .your-info{
           margin: 14px 0;
@@ -46,8 +41,8 @@
             margin: 20px 0;
             text-align: left;
             background: transparent;
-            width: 93%;
-            max-width: 300px;
+            width: 100%;
+            max-width: 340px;
             box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.224);
             padding: 20px;
             border-radius: 7px;
@@ -69,6 +64,71 @@
               outline: none;
               border: none;    
               background: #0082ec;   
+            }
+            .order-is-payed{
+              display: flex;
+              .icon{
+                position: absolute;
+                transform: translateX(60px) translateY(-2px);
+                width: auto;
+                border-radius: 50%;
+                padding: 2px 6px;
+                background: rgba(28, 211, 28, 0.15);
+                i{
+                color: rgba(28, 211, 28, 0.534);
+                font-size: 15px;
+              }
+            }
+              .icon-x{
+                position: absolute;
+                transform: translateX(60px) translateY(-2px);
+                width: auto;
+                border-radius: 50%;
+                padding: 2px 9px;
+                background: rgba(211, 28, 28, 0.15);
+                i{
+                color: rgba(211, 28, 28, 0.534);
+                font-size: 16px;
+              }
+            }
+          }
+            .order-status{
+              width: 100%;
+              height: 30px;
+              border-radius: 20px;
+              border: 1px solid #209bff;
+              position: relative;
+              padding: 0;
+              .inner{
+                background: #0082ec;
+                height: 100%;
+                border-radius: 20px;
+                &.one{
+                  width: 10%;
+                  border-bottom-right-radius: 0;
+                  border-top-right-radius: 0;
+                }
+                &.two{
+                  width: 20%;
+                  border-bottom-right-radius: 0;
+                  border-top-right-radius: 0;
+                }
+                &.three{
+                  width: 30%;
+                  border-bottom-right-radius: 0;
+                  border-top-right-radius: 0;
+                }
+                &.four{
+                  width: 50%;
+                  border-bottom-right-radius: 0;
+                  border-top-right-radius: 0;
+                }
+                &.five{
+                  width: 60%;
+                  border-bottom-right-radius: 0;
+                  border-top-right-radius: 0;
+                }
+              }
             }
           }
         }
