--- a/apps/core/templates/core/home.html
+++ b/apps/core/templates/core/home.html
@@ -131,7 +131,7 @@
                <i class="fa-solid fa-shop"></i>
             </div>
             <div class="card-text">
-               <h1>Nettbutikk</h1>
+               <h1>eCommerce</h1>
                <p>Selg produkter på en enklere måte, og få inn flere salg</p>
             </div>
          </div>
@@ -386,7 +386,7 @@
       <!-- PRICES TEXT -->
       <div class="text">
          <p class="price-headingp">priser</p>
-         <h1>Velg hva som passer deg best</h1>
+         <h1>Profesjonelle nettsider, rett foran deg</h1>
       </div>
       <!-- PRODUCT FLEX SECTION -->
       <div class="product-section">
@@ -396,6 +396,7 @@
                <div class="card-content">
                   <div class="icon">
                      <i class="fad fa-arrow-alt-from-left"></i>
+                     <p>Les mer</p>
                   </div>
                   <div class="card-text">
                      <!-- PRODUCT NAME -->
