--- a/apps/core/templates/core/home.html
+++ b/apps/core/templates/core/home.html
@@ -263,6 +263,7 @@
 
    </div>
 </div>
+<img src="{% static '/images/other/wave.png' %}" alt="webiser">
 <!-- BOOST CONVERSIONS -->
 <div class="boost-conversions">
    <!-- BOOST CONTENT -->
@@ -273,49 +274,51 @@
          <h1>Øk konverteringer med en unik nettside</h1>
          <!-- HOSTING LONG PARAGRAPH -->
          <p class="boost-longp">
-            Kom i gang på noen få klikk, og du er klar til å akseptere bestillinger i dag
+            Kom i gang på noen få klikk, og du er klar til å akseptere bestillinger
          </p>
       </div>
    </div>
-</div>
-<!-- BOOST BENEFITS -->
-<div class="boost-benefits">
-   <!-- BOOST BENEFITS CONTENT -->
-   <div class="content">
-      <!-- BOOST BENEFITS FLEX -->
-      <div class="flex">
-         <!-- BOOST BENEFITS ICON -->
-         <div class="icon">
-            <i class="fa-solid fa-check"></i>
+   <!-- BOOST BENEFITS -->
+   <div class="boost-benefits">
+      <!-- BOOST BENEFITS CONTENT -->
+      <div class="content">
+         <!-- BOOST BENEFITS FLEX -->
+         <div class="flex">
+            <!-- BOOST BENEFITS ICON -->
+            <div class="icon">
+               <i class="fa-solid fa-check"></i>
+            </div>
+            <p>eCommerce & Medlemskap</p>
          </div>
-         <p>eCommerce & Medlemskap</p>
-      </div>
-      <!-- BOOST BENEFITS FLEX -->
-      <div class="flex">
-         <!-- BOOST BENEFITS ICON -->
-         <div class="icon">
-            <i class="fa-solid fa-check"></i>
+         <!-- BOOST BENEFITS FLEX -->
+         <div class="flex">
+            <!-- BOOST BENEFITS ICON -->
+            <div class="icon">
+               <i class="fa-solid fa-check"></i>
+            </div>
+            <p>Gratis & Betalte Prøveversjoner</p>
          </div>
-         <p>Gratis & Betalte Prøveversjoner</p>
-      </div>
-      <!-- BOOST BENEFITS FLEX -->
-      <div class="flex">
-         <!-- BOOST BENEFITS ICON -->
-         <div class="icon">
-            <i class="fa-solid fa-check"></i>
+         <!-- BOOST BENEFITS FLEX -->
+         <div class="flex">
+            <!-- BOOST BENEFITS ICON -->
+            <div class="icon">
+               <i class="fa-solid fa-check"></i>
+            </div>
+            <p>Krever lite progamering</p>
          </div>
-         <p>Krever lite progamering</p>
-      </div>
-      <!-- BOOST BENEFITS FLEX -->
-      <div class="flex">
-         <!-- BOOST BENEFITS ICON -->
-         <div class="icon">
-            <i class="fa-solid fa-check"></i>
+         <!-- BOOST BENEFITS FLEX -->
+         <div class="flex">
+            <!-- BOOST BENEFITS ICON -->
+            <div class="icon">
+               <i class="fa-solid fa-check"></i>
+            </div>
+            <p>100% tilgang til nettsiden</p>
          </div>
-         <p>100% tilgang til nettsiden</p>
       </div>
    </div>
 </div>
+<img src="{% static '/images/other/wave-down.png' %}" alt="webiser">
+<div class="-margin" style="margin: -145px;">a</div>
 <!-- HOSTING AND DATA -->
 <div class="hosting">
    <!-- HOSTING CONTENT -->
@@ -323,13 +326,12 @@
       <!-- HOSTING TEXT -->
       <div class="text">
          <p class="hosting-headingp">data og hosting</p>
-         <h1>Billig Hosting med Høy Sikkerthet av Dataen Din</h1>
+         <h1>Billig hosting med høy sikkerthet av dataen din</h1>
       </div>
       <!-- HOSTING LONG PARAGRAPH -->
       <p class="hosting-longp">
-         Vi tilbyr en hosting tjeneste som vi <strong>anbefaller på det sterkeste</strong> for kunn 60kr/m. 
-         Hostingen er gjort via en sikker server, og alle dataene dine vil bli tatt vare på, og du vil få inkludert SSL i de 60kr/m.
-         Vi sørger for at ved bruk av hosting tjenesten våres, så garanterer vi 99% oppetid på nettisiden. 
+         Hostingen er gjort via en sikker server, og alle dataene dine vil bli tatt vare på.
+         Vi sørger at ved bruk av hosting tjenesten våres, så garanterer vi 99% oppetid på nettisiden, for kunn 60kr/m
       </p>
    </div>
 </div>
@@ -379,6 +381,7 @@
       </div>
    </div>
 </div>
+<img class="our-story-wave" src="{% static '/images/other/wave.png' %}" alt="webiser">
 <!-- PRICES -->
 <div class="prices">
    <!-- PRICES CONTENT -->
@@ -420,6 +423,8 @@
       </div>
    </div>
 </div>
+<img class="our-story-wave" src="{% static '/images/other/wave-down.png' %}" alt="webiser">
+<div class="-margin" style="margin: -162px;">a</div>
 <div class="our-story">
    <div class="content">
       <div class="text">
