--- a/static/scss/store/footer.css
+++ b/static/scss/store/footer.css
@@ -1,9 +1,8 @@
 #footer {
-  border-top: 1px solid #d2d2d2;
   width: 100%;
   height: auto;
   padding: 15px;
-  background: #fdfdfd;
+  background: #028cfd;
   position: relative;
   padding-bottom: 35px;
   padding-top: 20px;
@@ -21,8 +20,7 @@
 }
 
 #footer .footer-section .footer-ul h1 {
-  color: #183B56;
-  text-shadow: 1px 0 #183B56;
+  color: white;
   letter-spacing: 1px;
   font-size: 22px;
   font-weight: 800;
@@ -36,7 +34,7 @@
 #footer .footer-section .footer-ul .footer-li a {
   display: inline-block;
   width: 100%;
-  color: black;
+  color: white;
   font-size: 14px;
   padding: 5px;
   opacity: 0.7;
@@ -67,22 +65,12 @@
   transition: .3s ease-in-out;
 }
 
-#footer .social-icons::after {
-  content: '';
-  display: block;
-  position: absolute;
-  -webkit-transform: translateY(25px);
-          transform: translateY(25px);
-  width: 60%;
-  height: 2px;
-  background: rgba(0, 0, 0, 0.164);
-}
-
 #footer .social-icons i {
   border-radius: 15px;
   margin: 13px;
   font-size: 22px;
   padding: 7px;
+  color: white;
 }
 
 #footer .social-icons i:hover {
@@ -96,14 +84,14 @@
   width: 100%;
   height: auto;
   text-align: center;
-  background: #f7f7f7;
+  background: #0079db;
   padding: 6px;
 }
 
 #footer .copyright p {
   padding: auto;
   margin: auto;
-  color: black;
+  color: white;
   font-size: 13px;
   opacity: 0.8;
 }
