--- a/static/scss/store/footer.scss
+++ b/static/scss/store/footer.scss
@@ -1,10 +1,9 @@
 // STANDARD PHONE
 #footer{
-    border-top: 1px solid rgb(210, 210, 210);
     width: 100%;
     height: auto;
     padding: 15px;
-    background: rgb(253, 253, 253);
+    background: #028cfd;
     position: relative;
     padding-bottom: 35px;
     padding-top: 20px;
@@ -14,8 +13,7 @@
             width: 50%;
             text-align: center;
             h1{
-                color: #183B56;
-                text-shadow: 1px 0 #183B56;
+                color: white;
                 letter-spacing:1px;    
                 font-size: 22px;
                 font-weight: 800;
@@ -26,7 +24,7 @@
                 a{
                     display: inline-block;
                     width: 100%;
-                    color: black;
+                    color: white;
                     font-size: 14px;
                     padding: 5px;
                     opacity: 0.7;
@@ -48,20 +46,12 @@
         margin-top: 0;
         margin-bottom: 10px;
         transition: .3s ease-in-out;
-        &::after{
-            content: '';
-            display: block;
-            position: absolute;
-            transform: translateY(25px);
-            width: 60%;
-            height: 2px;
-            background: rgba(0, 0, 0, 0.164);
-        }
         i{
             border-radius: 15px;
             margin: 13px;
             font-size: 22px;
             padding: 7px;
+            color: white;
             &:hover{
                 background: rgba(150, 150, 150, 0.6);
             }
@@ -74,12 +64,12 @@
         width: 100%;
         height: auto;
         text-align: center;
-        background: rgb(247, 247, 247);
+        background: #0079db;
         padding: 6px;
         p{
             padding: auto;
             margin: auto;
-            color: black;
+            color: white;
             font-size: 13px;
             opacity: 0.8;
         }
