--- a/static/scss/userprofile/myaccount.css
+++ b/static/scss/userprofile/myaccount.css
@@ -2,9 +2,9 @@
   width: 100%;
   height: auto;
   background: transparent;
-  -webkit-transform: translateY(113px);
-          transform: translateY(113px);
-  margin-bottom: 170px;
+  -webkit-transform: translateY(103px);
+          transform: translateY(103px);
+  margin-bottom: 0;
 }
 
 .myaccount .account-card {
@@ -153,7 +153,7 @@
   max-width: 340px;
   -webkit-box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.224);
           box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.224);
-  padding: 20px;
+  padding: 28px;
   border-radius: 10px;
   position: relative;
 }
@@ -217,7 +217,7 @@
   right: 0;
   display: block;
   width: 2px;
-  height: 50px;
+  height: 48px;
   background: lightgray;
 }
 
@@ -247,99 +247,5 @@
 
 .myaccount .account-card .my-orders .you-got-orders p span {
   font-weight: 800;
-}
-
-.myaccount .account-card .my-orders .you-got-orders button {
-  border-radius: 4px;
-  width: 200px;
-  font-size: 16px;
-  padding: 10px;
-  -webkit-transition: all .2s ease-in-out;
-  transition: all .2s ease-in-out;
-  color: white;
-  outline: none;
-  border: none;
-  background: #0082ec;
-}
-
-.myaccount .account-card .my-orders .you-got-orders .order-is-payed {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.myaccount .account-card .my-orders .you-got-orders .order-is-payed .icon {
-  position: absolute;
-  -webkit-transform: translateX(60px) translateY(-2px);
-          transform: translateX(60px) translateY(-2px);
-  width: auto;
-  border-radius: 50%;
-  padding: 2px 6px;
-  background: rgba(28, 211, 28, 0.15);
-}
-
-.myaccount .account-card .my-orders .you-got-orders .order-is-payed .icon i {
-  color: rgba(28, 211, 28, 0.534);
-  font-size: 15px;
-}
-
-.myaccount .account-card .my-orders .you-got-orders .order-is-payed .icon-x {
-  position: absolute;
-  -webkit-transform: translateX(60px) translateY(-2px);
-          transform: translateX(60px) translateY(-2px);
-  width: auto;
-  border-radius: 50%;
-  padding: 2px 9px;
-  background: rgba(211, 28, 28, 0.15);
-}
-
-.myaccount .account-card .my-orders .you-got-orders .order-is-payed .icon-x i {
-  color: rgba(211, 28, 28, 0.534);
-  font-size: 16px;
-}
-
-.myaccount .account-card .my-orders .you-got-orders .order-status {
-  width: 100%;
-  height: 30px;
-  border-radius: 20px;
-  border: 1px solid #209bff;
-  position: relative;
-  padding: 0;
-}
-
-.myaccount .account-card .my-orders .you-got-orders .order-status .inner {
-  background: #0082ec;
-  height: 100%;
-  border-radius: 20px;
-}
-
-.myaccount .account-card .my-orders .you-got-orders .order-status .inner.one {
-  width: 10%;
-  border-bottom-right-radius: 0;
-  border-top-right-radius: 0;
-}
-
-.myaccount .account-card .my-orders .you-got-orders .order-status .inner.two {
-  width: 20%;
-  border-bottom-right-radius: 0;
-  border-top-right-radius: 0;
-}
-
-.myaccount .account-card .my-orders .you-got-orders .order-status .inner.three {
-  width: 30%;
-  border-bottom-right-radius: 0;
-  border-top-right-radius: 0;
-}
-
-.myaccount .account-card .my-orders .you-got-orders .order-status .inner.four {
-  width: 50%;
-  border-bottom-right-radius: 0;
-  border-top-right-radius: 0;
-}
-
-.myaccount .account-card .my-orders .you-got-orders .order-status .inner.five {
-  width: 60%;
-  border-bottom-right-radius: 0;
-  border-top-right-radius: 0;
 }
 /*# sourceMappingURL=myaccount.css.map */
