--- a/static/scss/userprofile/myaccount.scss
+++ b/static/scss/userprofile/myaccount.scss
@@ -3,8 +3,8 @@
     width: 100%;
     height: auto;
     background: transparent;
-    transform: translateY(113px);
-    margin-bottom: 170px;
+    transform: translateY(103px);
+    margin-bottom: 0;
     // LOGIN FORM
     .account-card{
       margin: 0 auto;
@@ -129,7 +129,7 @@
             width: 100%;
             max-width: 340px;
             box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.224);
-            padding: 20px;
+            padding: 28px;
             border-radius: 10px;
             position: relative;
             .order-row-one{
@@ -175,7 +175,7 @@
                   right: 0;
                   display: block;
                   width: 2px;
-                  height: 50px;
+                  height: 48px;
                   background: lightgray;
                 }
                 h1{
@@ -198,82 +198,6 @@
               width: 100%;
               span{
                 font-weight: 800;
-              }
-            }
-            button{
-              border-radius: 4px;
-              width: 200px;
-              font-size: 16px;
-              padding: 10px;
-              transition: all .2s ease-in-out;
-              color: white;
-              outline: none;
-              border: none;    
-              background: #0082ec;   
-            }
-            .order-is-payed{
-              display: flex;
-              .icon{
-                position: absolute;
-                transform: translateX(60px) translateY(-2px);
-                width: auto;
-                border-radius: 50%;
-                padding: 2px 6px;
-                background: rgba(28, 211, 28, 0.15);
-                i{
-                color: rgba(28, 211, 28, 0.534);
-                font-size: 15px;
-              }
-            }
-              .icon-x{
-                position: absolute;
-                transform: translateX(60px) translateY(-2px);
-                width: auto;
-                border-radius: 50%;
-                padding: 2px 9px;
-                background: rgba(211, 28, 28, 0.15);
-                i{
-                color: rgba(211, 28, 28, 0.534);
-                font-size: 16px;
-              }
-            }
-          }
-            .order-status{
-              width: 100%;
-              height: 30px;
-              border-radius: 20px;
-              border: 1px solid #209bff;
-              position: relative;
-              padding: 0;
-              .inner{
-                background: #0082ec;
-                height: 100%;
-                border-radius: 20px;
-                &.one{
-                  width: 10%;
-                  border-bottom-right-radius: 0;
-                  border-top-right-radius: 0;
-                }
-                &.two{
-                  width: 20%;
-                  border-bottom-right-radius: 0;
-                  border-top-right-radius: 0;
-                }
-                &.three{
-                  width: 30%;
-                  border-bottom-right-radius: 0;
-                  border-top-right-radius: 0;
-                }
-                &.four{
-                  width: 50%;
-                  border-bottom-right-radius: 0;
-                  border-top-right-radius: 0;
-                }
-                &.five{
-                  width: 60%;
-                  border-bottom-right-radius: 0;
-                  border-top-right-radius: 0;
-                }
               }
             }
           }
